fixed a layout bug

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -334,7 +334,7 @@
     &__label-right {
       color: $blue;
       font-size: $text-sm;
-      line-height: 1.5rem;
+      line-height: 1rem;
       padding: 0;
       margin: 0 0 1rem 0;
     }
