--- a/assets/scss/md-custom.scss
+++ b/assets/scss/md-custom.scss
@@ -72,6 +72,10 @@
     &__percentage {
       display: block;
     }
+
+    &__label-right {
+      text-align: right;
+    }
   }
 
   .page-inner {
